--- a/helm/orchestrator/Chart.yaml
+++ b/helm/orchestrator/Chart.yaml
@@ -29,3 +29,6 @@ dependencies:
   - name: brigade-project
     version: 1.0.0
     repository: https://brigadecore.github.io/charts
+  - name: mongodb
+    version: 10.3.2
+    repository: https://charts.bitnami.com/bitnami
