--- a/helm/orchestrator/values.yaml
+++ b/helm/orchestrator/values.yaml
@@ -7,6 +7,14 @@ replicaCount: 1
 orchestrator:
   image: orchestrator:latest
 
+mongodb:
+  useStatefulSet: true
+  auth:
+    rootPassword: "rootpassword"
+    username: "orchestrator"
+    password: "orchestrator"
+    database: "jobs"
+
 brigade: 
   ## These values are for the Generic Gateway.
   ## Enabling this will start a service that handles webhooks from external clients.
@@ -36,7 +44,7 @@ brigade:
 
 brigade-project:
   ## Name of the project, in the form "user/project"                        
-  project: "coeus/dummy-project"                               
+  project: "coeus/echoer"                               
                                                                               
   ## Domain/Org/Project                                                        
   repository: "knowship.io"                          
@@ -54,17 +62,22 @@ brigade-project:
     const { events, Job } = require("brigadier");
 
     events.on("simpleevent", (e, p) => { 
-      var echo = new Job("echosimpleevent", "alpine:3.8");
+      var echo = new Job("echo", "curlimages/curl:7.74.0")
       echo.tasks = [
-        "echo Project " + p.name,
-        "echo event type: $EVENT_TYPE",
-        "echo payload " + JSON.stringify(e.payload)
-      ];
+        "export URL=orchestrator:3000/api/jobs/$JOB_ID/status",
+        "curl --request PATCH $URL --header 'Content-Type: application/json' --data-raw '{\"status\":\"STARTED\"}'"
+      ]
+
       echo.env = {
-        "EVENT_TYPE": e.type
-      };
-      echo.run();
+        "JOB_ID": JSON.parse(e.payload).jobId
+      }
+
+      echo.run()
     });
+
+    events.on("after", () => {
+      console.log(" **** AFTER EVENT called")
+    })
                                                                
                         
   ## OPTIONAL: defaultScriptName is the name of a configmap used as a fallback brigade.js.
@@ -81,34 +94,10 @@ brigade-project:
   ## OPTIONAL: defaultConfigName is the name of a configmap used as a fallback brigade.js.
   # defaultConfigName: default-config-cm
                                                           
-            
-  ## Used by GitHub and other services to compute hook HMACs.                     
-  sharedSecret: "IBrakeForSeaBeasts"               
-
   ## OPTIONAL: genericGatewaySecret is the secret that should be used on subsequent calls to the Generic Gateway in order to raise a "webhook" event for this Project
   ## This is REQUIRED for the Generic Gateway, but optional otherwise.
-  genericGatewaySecret: "mygenericsecret"
+  genericGatewaySecret: "genericsecret"
   
-  vcsSidecar: "NONE"
-
-  ## OPTIONAL: Use this to have Brigade update your project about the build.
-  ## This is REQUIRED for the GitHub gateway, but optional otherwise.
-  # github:
-    # token: "github oauth token"
-    ## ENTERPRISE: For enterprise GitHub customers, set both of these as well.
-    # baseURL: "https://internal.github.url/foo"
-    # uploadURL: "https://internal.github.url/foo"
-
-  ## OPTIONAL: Use this for private repositories
-  ## This is the PRIVATE key that Brigade will use to clone a private repo.
-  ## You should generate a special key for this. Don't reuse another one.
-  # sshKey: |-
-    # -----BEGIN RSA PRIVATE KEY-----
-    # IIEpAIBAAKCAg1wyZD164xNLrANjRrcsbieLwHJ6fKD3LC19E...
-    # ...
-    # ...
-    # -----END RSA PRIVATE KEY-----
-
   ## OPTIONAL: Items in the 'secrets' array can be mounted as environment variables by
   ## the brigade.js
   ##
@@ -127,9 +116,9 @@ brigade-project:
   ##     myVar: "super awesome"
   ##
   ## Inside of the job's pod, $MY_ENV_VAR = "super awesome"
-  secrets:
-    ## Example:
-    # username: hello
+  # secrets:
+  #   ## Example:
+  #   username: hello
 
   ## OPTIONAL: vcsSidecar is the image that fetches a repo from a VCS
   ## The default sidecar uses Git to fetch a copy of the project.
@@ -140,59 +129,9 @@ brigade-project:
   ## If this is set to NONE, no sidecar is used.  This may improve performance
   ## very slightly, but will break some gateways or cause the default script to
   ## be used.
-  # vcsSidecar: "brigadecore/git-sidecar:latest"
-
-  ## OPTIONAL: vcsSidecarResources defines the resources (limits/requests) for all
-  ## the init-containers to be created by the worker and the one for the worker itself
-  # vcsSidecarResources:
-  #   limits:
-  #     cpu: "100m"
-  #     memory: "100Mi"
-  #   requests:
-  #     cpu: "100m"
-  #     memory: "100Mi"
-
-  ## OPTIONAL: imagePullSecrets allows you to specify a comma-separated list of
-  ## image pull secrets that will be injected into the worker. With this, you can
-  ## use a vcsSidecar or worker image from an internal repository.
-  ## https://kubernetes.io/docs/tasks/configure-pod-container/pull-image-private-registry/
-  # imagePullSecrets: foo
-
-  ## OPTIONAL: buildStorageSize is the size of the shared storage space used by the jobs
-  # buildStorageSize: "50Mi"
+  vcsSidecar: "NONE"
 
   ## Allow Jobs to run in privileged mode. This will allow features like
   ## Docker-in-Docker. This must be set to true before turning allowHostMounts
   ## on.
   allowPrivilegedJobs: "true"
-
-  ## OPTIONAL: Use this to allow host mounted docker sockets in your jobs.
-  ## This is a big security risk if your project is public-facing; enable at your own risk.
-  # allowHostMounts: "true"
-
-  ## Kubernetes-specific configuration options.
-  kubernetes:
-    ## OPTIONAL: Override the storage class used for storing job caches. This must
-    ## point to a readWriteMany volume provisioner.
-    # cacheStorageClass: default
-    # # OPTIONAL: Override the storage class used for build storage. This must
-    # # point to a readWriteMany volume provisioner.
-    # buildStorageClass: default
-
-  ###
-  ## ADVANCED
-  ###
-
-  ## OPTIONAL: specify an alternative command that the worker pod should run on startup.
-  ## For example, if you want the typescript compiler to re-run, replace this with
-  ## 'yarn build-start'. The default is 'yarn -s start' (-s is for silent).
-  ## Uncomment the line below to increase logging verbosity.
-  # workerCommand: "yarn start"
-
-  ## OPTIONAL: Project-specific worker settings which takes precedence over brigade-wide settings
-  ## Useful when you want a specific brigade-worker image for running brigade.js of this project.
-  worker:
-    # registry: brigadecore
-    # name: brigade-worker
-    # tag:
-    # pullPolicy: IfNotPresent
