--- a/helm/orchestrator/values.yaml
+++ b/helm/orchestrator/values.yaml
@@ -6,6 +6,7 @@ replicaCount: 1
 
 orchestrator:
   image: orchestrator:latest
+  environment: minikube
 
 mongodb:
   useStatefulSet: true
@@ -64,12 +65,16 @@ brigade-project:
     events.on("simpleevent", (e, p) => { 
       var echo = new Job("echo", "curlimages/curl:7.74.0")
       echo.tasks = [
-        "export URL=orchestrator:3000/api/jobs/$JOB_ID/status",
-        "curl --request PATCH $URL --header 'Content-Type: application/json' --data-raw '{\"status\":\"STARTED\"}'"
+        "export STATUS_URL=orchestrator:3000/api/jobs/$JOB_ID/status",
+        "curl --request PATCH $STATUS_URL --header 'Content-Type: application/json' --data-raw '{\"status\":\"STARTED\"}'",
+        "export STATUS_URL=orchestrator:3000/api/jobs/$JOB_ID/brigade",
+        "curl --request PATCH $STATUS_URL --header 'Content-Type: application/json' --data-raw '{\"buildId\":\"$BUILD_ID\"}'"
       ]
 
       echo.env = {
-        "JOB_ID": JSON.parse(e.payload).jobId
+        "JOB_ID": JSON.parse(e.payload).jobId,
+        "BUILD_ID": e.buildID
+
       }
 
       echo.run()
