--vm-driver is deprecated

--- a/helm/Makefile
+++ b/helm/Makefile
@@ -34,7 +34,7 @@ start-mk:
 		--memory=4096 \
 		--disk-size=20000mb \
 		--kubernetes-version 1.18.3 \
-		--vm-driver virtualbox ;
+		--driver virtualbox ;
 
 start: start-mk install-deps deploy-minikube
 
