--- a/helm/orchestrator/templates/orchestrator.yaml
+++ b/helm/orchestrator/templates/orchestrator.yaml
@@ -17,10 +17,14 @@ spec:
         image: {{ .Values.orchestrator.image }}
         imagePullPolicy: IfNotPresent
         env:
-          - name: BRIGADE_HOST
+          - name: GENERIC_GATEWAY_HOST
             value: {{ .Values.orchestrator.environment  }}-brigade-generic-gateway 
-          - name: BRIGADE_PORT
+          - name: GENERIC_GATEWAY_PORT
             value: "8081"
+          - name: BRIGADE_API_HOST
+            value: {{ .Values.orchestrator.environment  }}-brigade-api 
+          - name: BRIGADE_API_PORT
+            value: "7745"
           - name: MONGODB_USER
             value: root
           - name: MONGODB_PASS
@@ -47,3 +51,23 @@ spec:
     protocol: TCP
   selector:
     app: orchestrator
+
+---
+
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: dummy-orchestrator-ingress
+  annotations:
+    nginx.ingress.kubernetes.io/rewrite-target: /
+spec:
+  rules:
+  - http:
+      paths:
+      - path: /dummy-orchestrator
+        pathType: Prefix
+        backend:
+          service:
+            name: orchestrator
+            port:
+              number: 3000
