--- a/helm/orchestrator/values.yaml
+++ b/helm/orchestrator/values.yaml
@@ -63,26 +63,26 @@ brigade-project:
     const { events, Job } = require("brigadier");
 
     events.on("simpleevent", (e, p) => { 
-      var echo = new Job("echo", "curlimages/curl:7.74.0")
+      var detect = new Job("detect", "coeus-engine:latest")
       
-      echo.tasks = [
+      detect.tasks = [
         "export URL=orchestrator:3000/api/jobs/$JOB_ID/status",
-        "curl --request PATCH $URL --header 'Content-Type: application/json' --data-raw '{\"status\":\"STARTED\"}'",
-        "export STATUS_URL=orchestrator:3000/api/jobs/$JOB_ID/brigade",
-        "curl --request PATCH $STATUS_URL --header 'Content-Type: application/json' --data-raw '{\"buildId\":\"$BUILD_ID\"}'",
-        "sleep 25",
+        "curl --request PATCH $URL --header 'Content-Type: application/json' --data-raw '{\"status\":\"STARTED\"}' | jq .",
+        "export STATUS_URL=orchestrator:3000/api/jobs/$JOB_ID/brigade && export $PATCH_BODY={\"buildId\":\"$BUILD_ID\"}",
+        "curl --request PATCH $STATUS_URL --header 'Content-Type: application/json' --data-raw $PATCH_BODY | jq .",
+        "/usr/src/entrypoint.sh",
         "export STATUS_URL=orchestrator:3000/api/jobs/$JOB_ID/status",
-        "curl --request PATCH $STATUS_URL --header 'Content-Type: application/json' --data-raw '{\"status\":\"DONE\"}'"
+        "curl --request PATCH $STATUS_URL --header 'Content-Type: application/json' --data-raw '{\"status\":\"DONE\"}' | jq ."
       ]
 
-      echo.env = {
+      detect.env = {
         "JOB_ID": JSON.parse(e.payload).jobId,
         "VIDEO_URL": JSON.parse(e.payload).videoUrl,
         "BUILD_ID": e.buildID
 
       }
 
-      echo.run()
+      detect.run()
     });
 
     events.on("after", () => {
