e2e aws secrets success

--- a/helm/Makefile
+++ b/helm/Makefile
@@ -36,6 +36,15 @@ start-mk:
 		--kubernetes-version 1.19.1 \
 		--driver virtualbox ;
 
+create-aws-secrets:
+	if [ -z AWS_ACCESS_KEY_ID ]; then echo "AWS_ACCESS_KEY_ID is unset" && exit 1; else echo "AWS_ACCESS_KEY_ID is set to '$$AWS_ACCESS_KEY_ID'"; fi
+	if [ -z AWS_SECRET_ACCESS_KEY ]; then echo "AWS_SECRET_ACCESS_KEY is unset" && exit 1; else echo "AWS_SECRET_ACCESS_KEY is set to '$$AWS_SECRET_ACCESS_KEY'"; fi
+	kubectl create secret generic aws-access-key-id --from-literal=access-key-id=$$AWS_ACCESS_KEY_ID
+	kubectl create secret generic aws-secret-access-key --from-literal=secret-access-key=$$AWS_SECRET_ACCESS_KEY
+
+get-aws-creds:
+	kubectl get secrets/aws-access-key-id --template={{.data.access-key-id}}
+
 start: start-mk install-deps deploy-minikube
 
 restart:
@@ -48,6 +57,9 @@ cleanup-minikube:
 
 kashti:
 	minikube service minikube-kashti
+
+kasti-fwd:
+	kubectl port-forward service/minikube-kashti 8081:80
 
 generic-gateway:
 	kubectl port-forward service/minikube-brigade-generic-gateway 8081:8081
