--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -1,7 +1,7 @@
 ############################
 # STEP 1 build executable binary
 ############################
-FROM golang:alpine AS builder
+FROM golang:alpine3.12 AS builder
 
 # Install git for fetching go dependencies.
 RUN apk update && apk add --no-cache git
