Update dockerfile with alpine 3.12 DNS fix details

--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -1,8 +1,9 @@
 ############################
 # STEP 1 build executable binary
 ############################
-# Pinnin to alpine3.12 to resolve docker build DNS error 
+# Pinning to alpine3.12 to resolve docker build DNS error 
 # https://github.com/gliderlabs/docker-alpine/issues/386
+# https://github.com/kubernetes/minikube/issues/10830
 FROM golang:alpine3.12 AS builder
 
 # Install git for fetching go dependencies.
